tests/lang/s00_bootstrap/t07_a_invalid_identifier_double_underscore.nim
discard """
  description: "No consecutive underscores in identifier names."
  errormsg: "invalid identifier: only non-consecutive and non-trailing underscores allowed"

  # don't test for line and column numbers for ease of implementation
"""

invalid__identifier